---
source: crates/utils/src/wasm_tools.rs
expression: imports
---
{
  "obelisk:workflow/host-activities.new-join-set": [
    {
      "params": [],
      "return_type": "join-set-id"
    },
    "obelisk:workflow/host-activities",
    "new-join-set"
  ],
  "testing:fibo-obelisk-ext/fibo.fibo-await-next": [
    {
      "params": [
        {
          "name": "join-set-id",
          "wit_type": "borrow<join-set-id>"
        }
      ],
      "return_type": "result<tuple<execution-id, u64>, tuple<execution-id, execution-error>>"
    },
    "testing:fibo-obelisk-ext/fibo",
    "fibo-await-next"
  ],
  "testing:fibo-obelisk-ext/fibo.fibo-submit": [
    {
      "params": [
        {
          "name": "join-set-id",
          "wit_type": "borrow<join-set-id>"
        },
        {
          "name": "n",
          "wit_type": "u8"
        }
      ],
      "return_type": "execution-id"
    },
    "testing:fibo-obelisk-ext/fibo",
    "fibo-submit"
  ],
  "testing:fibo-workflow-obelisk-ext/workflow.fiboa-concurrent-await-next": [
    {
      "params": [
        {
          "name": "join-set-id",
          "wit_type": "borrow<join-set-id>"
        }
      ],
      "return_type": "result<tuple<execution-id, u64>, tuple<execution-id, execution-error>>"
    },
    "testing:fibo-workflow-obelisk-ext/workflow",
    "fiboa-concurrent-await-next"
  ],
  "testing:fibo-workflow-obelisk-ext/workflow.fiboa-concurrent-submit": [
    {
      "params": [
        {
          "name": "join-set-id",
          "wit_type": "borrow<join-set-id>"
        },
        {
          "name": "n",
          "wit_type": "u8"
        },
        {
          "name": "iterations",
          "wit_type": "u32"
        }
      ],
      "return_type": "execution-id"
    },
    "testing:fibo-workflow-obelisk-ext/workflow",
    "fiboa-concurrent-submit"
  ],
  "testing:fibo-workflow/workflow-nesting.fibo-nested-workflow": [
    {
      "params": [
        {
          "name": "n",
          "wit_type": "u8"
        }
      ],
      "return_type": "u64"
    },
    "testing:fibo-workflow/workflow-nesting",
    "fibo-nested-workflow"
  ],
  "testing:fibo-workflow/workflow-nesting.fibo-start-fiboas": [
    {
      "params": [
        {
          "name": "n",
          "wit_type": "u8"
        },
        {
          "name": "fiboas",
          "wit_type": "u32"
        },
        {
          "name": "iterations-per-fiboa",
          "wit_type": "u32"
        }
      ],
      "return_type": "u64"
    },
    "testing:fibo-workflow/workflow-nesting",
    "fibo-start-fiboas"
  ],
  "testing:fibo/fibo.fibo": [
    {
      "params": [
        {
          "name": "n",
          "wit_type": "u8"
        }
      ],
      "return_type": "u64"
    },
    "testing:fibo/fibo",
    "fibo"
  ]
}
